--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sass-loader": "^6.0.7",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "2.6.7",
+    "vue-core-image-upload": "^2.4.5",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
